<resources>
    <string name="app_name">499_android</string>
    <string name="appName">Get Up and Move!</string>
    <string name="loginText"> <u>Login</u> </string>
    <string name="createAccText">Create Account</string>
    <string name="pick_time">Select Time</string>
    <string name="select_schedule">Landing Page</string>
    <string name="start_survey">Start Survey</string>
    <string name="_0">0</string>
    <string name="start_activity">Start Activity</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="video_text">Videos Demonstration</string>
    <string name="friends_txt">Add Friend</string>
    <string name="textview">Longevity Points</string>
    <string name="username">Username</string>
    <string name="Back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="loading">loading...</string>
    <string name="logotext">logoText</string>
    <string name="logout">Log Out</string>
    <string name="yes">Yes</string>
    <string name="sign_up">Sign Up</string>
    <string name="begin_your_journey_to_better_health_now">Begin Your Journey to Better Health Now!</string>

</resources>