<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand">

    <Button
        android:id="@+id/startActivityBtn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:onClick="startAnimationTestActivity"
        android:text="@string/start_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointDisplay" />

    <Button
        android:id="@+id/changeAvatarBtn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/change_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startActivityBtn" />

    <Button
        android:id="@+id/startSurveyBtn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:onClick="startEditScheduleActivity"
        android:text="@string/start_survey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editScheduleBtn" />

    <Button
        android:id="@+id/editScheduleBtn"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:onClick="startEditScheduleActivity"
        android:text="@string/edit_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeAvatarBtn" />

    <TextView
        android:id="@+id/pointDisplay"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="399dp"
        android:layout_height="202dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="553dp"
        android:background="#00960000"
        android:contentDescription="@string/logotext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        app:srcCompat="@drawable/logo_sand" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="171dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!--    <TextView-->
    <!--        android:id="@+id/usernameDisplay"-->
    <!--        android:layout_width="89dp"-->
    <!--        android:layout_height="32dp"-->
    <!--        android:layout_marginStart="36dp"-->
    <!--        android:layout_marginLeft="36dp"-->
    <!--        android:layout_marginBottom="508dp"-->
    <!--        android:gravity="center_horizontal"-->
    <!--        android:text="@string/loading"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textColor="#3F51B5"-->
    <!--        android:textSize="18sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/textView" />-->

    <!--    <Button-->
    <!--        android:id="@+id/logoutBtn"-->
    <!--        android:layout_width="85dp"-->
    <!--        android:layout_height="51dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginLeft="16dp"-->
    <!--        android:layout_marginBottom="488dp"-->
    <!--        android:text="@string/logout"-->
    <!--        android:textSize="12sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>